# go/pkg/server/gateway.go
@@ -251,6 +251,11 @@ func (g *Gateway) forwardCheckRequestMiddleware(next http.Handler) http.Handler 
 						}
 						req.Header.Set("Content-Type", "application/json")
 
+						switch slaveNode.Authn.Method {
+						case "preshared_key":
+							req.Header.Set("Authorization", "Bearer "+slaveNode.Authn.PresharedKey.Key)
+						}
+
 						resp, err := client.Do(req)
 						if err != nil {
 							errCh <- failure.Translate(err, appError.ErrValidateServiceForwardFailed)
